...
    <string name="updatecard">Write Information</string>
    <!--Strings for Log in-->
    <string name="loginemailbanner">Please enter email:</string>
    <string name="loginemail">Email</string>
    <string name="loginpasswordbanner">Please enter password:</string>
    <string name="loginpassword">Password</string>
    <string name="enter">Log in</string>
    <string name="register">No account? Register now.</string>
    <!--Strings for Registration-->
    <string name="create_account">Create Account</string>
    <!--Strings for recieve qr -->
    <string name="qrscanbanner">Activate QR Scanner</string>
    <string name="qrscan">Activate Scanner</string>
...
